Various Cantaloupe Header Fixes - "Other Archives" no longer closes menu on mobile devices - Submenu items are now numbered correctly - Help icon now has right border when logged in as an editor - More Scalar Projects link now points to the local Scalar index page - Delete page option functional again - Z-index of header fixed for Media Citations view (was behind citations panel) - Fixed hover conflict on submenu items (sometimes caused flickering on hover) - A few other minor bug fixes/code standardization tweaks

--- a/system/application/views/melons/cantaloupe/css/header.css
+++ b/system/application/views/melons/cantaloupe/css/header.css
@@ -3,6 +3,9 @@
 	padding: 9px;
 	line-height: 30px;
 }
+.navbar{
+	z-index: 1039;
+}
 .navbar li a.headerIcon{
 	outline: 0;
 }
